# leoscript

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml
examples/cleo/: Cargo.toml
examples/cleo/src/: example.leo  main.rs
examples/cleo/src/scripts/: calculator.leo  example.leo
examples/playground/: Cargo.toml
examples/scripts/: fibonacci.leo  graphics.leo  option.leo
leoscript-cli/: Cargo.toml
leoscript-cli/src/: example.leo  main.rs
leoscript-lib/: Cargo.toml
leoscript-lib/src/: lib.rs
leoscript-lib/src/common/: error.rs  mod.rs  program.rs  stacktrace.rs  variant.rs  warning.rs
leoscript-lib/src/compiler/: enum.rs  function.rs  module.rs  parser.rs  script.rs  token.rs
leoscript-lib/src/stdlib/: dictionary.rs  math.rs  mod.rs  string.rs
leoscript-lib/src/vm/: thread.rs
leoscript-lib/tests/: classes.rs  control_flow.rs  dictionary.rs  imports.rs  loops.rs  match.rs  math.rs  modules.rs  stdlib.rs  variables.rs
leoscript-lib/tests/common/: macros.rs
leoscript-lib/tests/imports/: person.leo
leoscript-lib/tests/scripts/: dictionary.leo  graphics.leo
scripts/: ackermann.leo  assert.leo  console.leo  graphics.leo  math.leo  system.leo
workspace/compiler/: Cargo.toml
workspace/compiler/src/: error.rs  lib.rs  warning.rs
workspace/lib/: Cargo.toml
workspace/lib/src/: error.rs  lib.rs
workspace/lib/tests/: branching.rs  classes.rs  control_flow.rs  dictionary.rs  expressions.rs  imports.rs  loops.rs  match.rs  math.rs  modules.rs  variables.rs
workspace/runtime/: Cargo.toml
(+130 files in other folders)
