[package]
name = "leoscript-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["compiler", "vm"]
compiler = []
vm = []

[dependencies]
nom = "7"
nom_locate = "4"
log = "0.4"

[dev-dependencies]
simplelog = "0.12"