[package]
name = "cleo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["scripting", "basic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leoscript = { path = "../../workspace/lib" }
clap = { version = "4.4.11", features = ["derive"] }
regex = "1.10.2"

[profile.release]
opt-level = 3
